--- a/app/blocks/info-editable/info-editable.scss
+++ b/app/blocks/info-editable/info-editable.scss
@@ -134,6 +134,11 @@
       flex: 1;
     }
 
+    span[data-field-edit] {
+      display: inline-block;
+      min-width: 5px;
+    }
+
     &-input {
       display: inline-block;
       min-width: 20px;
