--- a/app/blocks/table/table.scss
+++ b/app/blocks/table/table.scss
@@ -157,5 +157,26 @@
         }
       }
     }
+
+    &_v3 {
+
+      .table {
+
+        &__cell {
+          width: 15%;
+          padding-left: 30px;
+
+          &:first-child {
+            width: 32%;
+            padding-left: 0;
+          }
+
+          &:last-child {
+            width: 8%;
+            padding-left: 5px;
+          }
+        }
+      }
+    }
   }
 }
