--- a/app/pages/order-summary/order-summary.pug
+++ b/app/pages/order-summary/order-summary.pug
@@ -27,7 +27,7 @@ block content
                   +space-reservation-info(space)
                 +col({sm: 12, md:6, xl: 12})
                   +space-reservation-price
-                    +offer-select()._left.__select
+                    +offer-select().offer-select_left.__select
                       each item in offers
                         +offer-select-item(item)
         +content-column-main._no-ptop
