--- a/app/blocks/invoice-info/invoice-info.scss
+++ b/app/blocks/invoice-info/invoice-info.scss
@@ -51,7 +51,7 @@
     }
   }
 
-  &__name, &__state, &__price {
+  &__name, &__state, &__price, &__commision {
     @include text16;
 
     display: inline-block;
@@ -89,12 +89,32 @@
     }
   }
 
+  &__amount {
+    display: inline-block;
+
+    &:not(:last-child) {
+      margin-right: 20px;
+    }
+  }
+
   &__describe {
     position: relative;
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
+    flex-wrap: wrap;
+    align-content: flex-end;
     width: 100%;
+  }
+
+  &__commision {
+    display: block;
+    width: 100%;
+    font-weight: 400;
+
+    b {
+      font-weight: 700;
+    }
   }
 
   &__button {
