--- a/app/components/popup-invoices/popup-invoices.pug
+++ b/app/components/popup-invoices/popup-invoices.pug
@@ -3,13 +3,17 @@ mixin popup-invoices(host)
   +popup._big.popup-invoices__&attributes(attributes)
     +popup-header.popup__header_white.popup__header_fx
       +popup-title Invoices
-    +table.table_simple.popup-invoices__table
+    +table.table_simple.table_simple_v3.popup-invoices__table
       thead
         tr.table__row
           th.table__cell.table__cell_head Subject
           th.table__cell.table__cell_head Invoice Date
           th.table__cell.table__cell_head Due Date
-          th.table__cell.table__cell_head Amount to pay
+          if !host
+            th.table__cell.table__cell_head Amount to pay
+          else
+            th.table__cell.table__cell_head Amount
+            th.table__cell.table__cell_head Commision
           th.table__cell.table__cell_head Status
       tbody
         tr.table__row.table__row_interactive.js-popup-depends-width(data-source=srcPopup)
@@ -18,7 +22,11 @@ mixin popup-invoices(host)
             span One Heddon street Office space
           td.table__cell 25 Apr 2019
           td.table__cell 30 Apr 2019
-          td.table__cell.table__cell_bold 1568.00 &pound;
+          if !host
+            td.table__cell.table__cell_bold 1568.00 &pound;
+          else
+            td.table__cell.table__cell_bold 1568.00 &pound;
+            td.table__cell.table__cell_bold 68.00 &pound;
           td.table__cell.table__cell_bold
             if !host
               +button()._smaller._fz17._wide.js-popup-top(href="#popup-payment-form" data-stoppropagation) Pay now
@@ -30,14 +38,22 @@ mixin popup-invoices(host)
               span One Heddon street Office space
             td.table__cell 25 Mar 2019
             td.table__cell 30 Feb 2019
-            td.table__cell.table__cell_bold 1568.00 &pound;
+            if !host
+              td.table__cell.table__cell_bold 1568.00 &pound;
+            else
+              td.table__cell.table__cell_bold 1568.00 &pound;
+              td.table__cell.table__cell_bold 68.00 &pound;
             td.table__cell.table__cell_bold Paid
           tr.table__row.table__row_interactive.js-popup-depends-width(data-source=srcPopup)
             td.table__cell
               span One Heddon street Office space
             td.table__cell 25 Mar 2019
             td.table__cell 30 Feb 2019
-            td.table__cell.table__cell_bold 1568.00 &pound;
+            if !host
+              td.table__cell.table__cell_bold 1568.00 &pound;
+            else
+              td.table__cell.table__cell_bold 1568.00 &pound;
+              td.table__cell.table__cell_bold 68.00 &pound;
             td.table__cell.table__cell_bold Paid
         - }
     +pagination._centered.__pagination
@@ -59,9 +75,9 @@ mixin popup-invoices-mobile(host)
           if !host
             +invoice-info(data1).is-new.__invoice.js-popup-depends-width(data-source=srcPopup)
           else
-            +invoice-info(dataHost).is-new.__invoice.js-popup-depends-width(data-source=srcPopup)
+            +invoice-info(dataHost, true).is-new.__invoice.js-popup-depends-width(data-source=srcPopup)
           - for (var i = 0; i < 3; i++) {
-            +invoice-info(data2).__invoice.js-popup-depends-width(data-source=srcPopup)
-            +invoice-info(data3).__invoice.js-popup-depends-width(data-source=srcPopup)
+            +invoice-info(data2, host).__invoice.js-popup-depends-width(data-source=srcPopup)
+            +invoice-info(data3, host).__invoice.js-popup-depends-width(data-source=srcPopup)
           -}
       block
