--- a/app/blocks/short-space/short-space.scss
+++ b/app/blocks/short-space/short-space.scss
@@ -19,6 +19,12 @@
       width: 100%;
       margin-right: 0;
     }
+
+    &_small {
+      min-width: 84px;
+      width: 84px;
+      margin-right: 18px;
+    }
   }
 
   &__image {
