--- a/app/blocks/state/state.scss
+++ b/app/blocks/state/state.scss
@@ -55,6 +55,24 @@
         height: 8px;
       }
     }
+
+    &_big {
+      padding-left: 30px;
+
+      @include screen('sm') {
+        padding-left: 16px;
+      }
+
+      &::before {
+        width: 19px;
+        height: 18px;
+
+        @include screen('sm') {
+          width: 10px;
+          height: 8px;
+        }
+      }
+    }
   }
 
   &_dcheck {
