--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -172,6 +172,7 @@ $color-star-gray: #bcc6ca;
 $color-table-dark: #181c22;
 $color-oi-dark: #575f6a;
 $color-input-dark: #313339;
+$color-new-disabled: #b4bbc6;
 
 // ##########
 // Transitions
