--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -65,6 +65,8 @@ block content
         +link(href="deal-passport-agreement1.html") SpacePool - Deal Passport for Terms and Conditions (deal-passport-agreement1.html)
         +link(href="deal-passport-agreement2.html") SpacePool - Deal Passport for Terms and Conditions (deal-passport-agreement2.html)
         +link(href="500.html") SpacePool - 500 (500.html)
+        +link(href="edit-space-images.html") SpacePool - Edit Space page - Photos (edit-space-images.html)
+        +link(href="system2.html") SpacePool - System Messages 2 (system2.html)
 
       +page-title._small Попапы
       +e.list
