--- a/app/blocks/all-saved/all-saved.pug
+++ b/app/blocks/all-saved/all-saved.pug
@@ -1,8 +1,5 @@
 mixin all-saved(tag)
   +b(tag || 'div').all-saved&attributes(attributes)
-    //- +e.ico
-    //-   +icon('save').__save
-    //-   +icon('check').__check
-    +e.IMG.icon(src="assets/images/save-success.png")
+    +e.IMG.icon(src="assets/images/save-success.svg")
     +e.text
       block
