--- a/app/pages/edit-space/edit-space-images.pug
+++ b/app/pages/edit-space/edit-space-images.pug
@@ -56,7 +56,7 @@ block content
                           option(value="Roof terrace") Roof terrace
                           option(value="reception") Reception
                   - }
-            +e.panel_fixed._fixed_visible(data-hidden-panel)
+            +e.panel_fixed(data-hidden-panel)
               .container
                 +grid.grid_big.grid_notop
                   +col({ xl: 3, md: 12 })
