--- a/app/components/popup-add-offer-tc/popup-add-offer-tc.pug
+++ b/app/components/popup-add-offer-tc/popup-add-offer-tc.pug
@@ -29,19 +29,8 @@ mixin popup-add-offer-tc()
               +col({xl: 12})
                 +form-section-wrapper._noflex
                   +form-box('Offer Description')
-                    +input(type="text" name="offerDescription" placeholder="Offer Description" required)
+                    +textarea(name="offerDescription" placeholder="Offer Description" required rows="1")
                   +form-section-text._light Any information, rules, restrictions and additional features for this offer
-              //- +col({xl: 8, sm: 12})(data-form-element="meetingRoom")
-              //-   +form-section._mid-mg
-              //-     +form-section-header._mg21
-              //-       +form-section-title('h4')._small Prices (Mark the positions and fill the Price)
-              //-       +form-section-content
-              //-         +form-section-wrapper._mg29
-              //-           +check-input(true) Per Hour
-              //-         +form-section-wrapper._mg29
-              //-           +check-input Per Half a day
-              //-         +form-section-wrapper._mg29
-              //-           +check-input Per day
               +col({xl: 6, sm: 12})
                 +e.field
                   +form-section-wrapper._negative-mg.__count
