--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -6,6 +6,7 @@ include ../blocks/all-saved/all-saved
 include ../blocks/article/article
 include ../blocks/avatar-uploader/avatar-uploader
 include ../blocks/avatar/avatar
+include ../blocks/block-check/block-check
 include ../blocks/blog-news/blog-news
 include ../blocks/blog/blog
 include ../blocks/box/box
@@ -69,6 +70,7 @@ include ../blocks/info/info
 include ../blocks/informer/informer
 include ../blocks/invoice-info/invoice-info
 include ../blocks/link/link
+include ../blocks/list-table/list-table
 include ../blocks/lists/lists
 include ../blocks/loader/loader
 include ../blocks/logo/logo
@@ -142,6 +144,7 @@ include ../blocks/switch/switch
 include ../blocks/table-head/table-head
 include ../blocks/table/table
 include ../blocks/tabs/tabs
+include ../blocks/team-check/team-check
 include ../blocks/text-list/text-list
 include ../blocks/time/time
 include ../blocks/timer/timer
@@ -158,6 +161,7 @@ include ../blocks/warning/warning
 include ../components/404/404
 include ../components/advanced-filter/advanced-filter
 include ../components/breadcrumbs-box/breadcrumbs-box
+include ../components/cancelation-form/cancelation-form
 include ../components/compact-filter/compact-filter
 include ../components/condition-search/condition-search
 include ../components/content/content
@@ -181,6 +185,8 @@ include ../components/popup-add-offer/popup-add-offer
 include ../components/popup-agreement/popup-agreement
 include ../components/popup-arrange-viewing/popup-arrange-viewing
 include ../components/popup-cancel-request/popup-cancel-request
+include ../components/popup-cancelation-contract/popup-cancelation-contract
+include ../components/popup-cancelation-contract/popup-cancelation-contract-unsigned
 include ../components/popup-cancellation/popup-cancellation
 include ../components/popup-chat/popup-chat
 include ../components/popup-document/popup-document
@@ -204,6 +210,7 @@ include ../components/space-info/space-info
 include ../components/space-offer/space-offer
 include ../components/space-short/space-short
 include ../components/success-message/success-message
+include ../components/suggestion-form/suggestion-form
 include ../components/ubo-card/ubo-card
 include ../components/ui-kit/ui-kit
 include ../components/user-menu-panel/user-menu-panel
