--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -6,6 +6,17 @@ block head
 block content
   +b.sitemap
     .container
+      +page-title._small Попапы (обновление от 27.12.2019)
+      br
+      +e.list
+        +link(href="#popup-cancelation-contract-unsigned").js-popup-top Popup cancel request
+        +link(href="#popup-cancelation-contract").js-popup-top Popup cancel contract
+
+      //- +page-title._small Страницы (обновление от 27.12.2019)
+      //- br
+      //- +e.list
+      //-   +link(href="system3.html") SpacePool - System Messages 3 (system3.html)
+
       +page-title._small Страницы
       +e.list
         +link(href="ui-kit.html") UI-kit (ui-kit.html)
@@ -153,3 +164,5 @@ block popups
   +popup-invoices-mobile(true)#popup-invoices-host-mobile
   +popup-invoice-host#popup-invoice-host
   +popup-invoice-host-mobile#popup-invoice-host-mobile
+  +popup-cancelation-contract-unsigned#popup-cancelation-contract-unsigned
+  +popup-cancelation-contract#popup-cancelation-contract
