--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -173,6 +173,7 @@ $color-table-dark: #181c22;
 $color-oi-dark: #575f6a;
 $color-input-dark: #313339;
 $color-new-disabled: #b4bbc6;
+$color-new-input: #515964;
 
 // ##########
 // Transitions
