--- a/app/blocks/form/form.scss
+++ b/app/blocks/form/form.scss
@@ -535,6 +535,18 @@
     }
   }
 
+  &__heading {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    @include screen('sm') {
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: flex-start;
+    }
+  }
+
   &__title {
     @include heading-3;
 
@@ -674,6 +686,10 @@
         order: 2;
       }
     }
+
+    &_fw400 {
+      font-weight: 400;
+    }
   }
 
   &__tabs {
@@ -757,6 +773,18 @@
       }
     }
 
+    &_fz20 {
+      @include heading-4;
+
+      line-height: (25 / 20);
+
+      @include screen('sm') {
+        @include text-big;
+
+        line-height: (25 / 18);
+      }
+    }
+
     &_fz24 {
       @include text24;
 
@@ -801,6 +829,42 @@
       }
     }
 
+    &_mgt6 {
+      margin-top: 6px;
+    }
+
+    &_mgt44 {
+      margin-top: 44px;
+
+      @include screen('sm') {
+        margin-top: 30px;
+      }
+    }
+
+    &_mgt50 {
+      margin-top: 50px;
+
+      @include screen('sm') {
+        margin-top: 30px;
+      }
+    }
+
+    &_mgt60 {
+      margin-top: 60px;
+
+      @include screen('sm') {
+        margin-top: 40px;
+      }
+    }
+
+    &_mgt76 {
+      margin-top: 76px;
+
+      @include screen('sm') {
+        margin-top: 50px;
+      }
+    }
+
     &_block {
       display: block;
       width: 100%;
@@ -808,6 +872,18 @@
 
     &_lh143 {
       line-height: 1.43;
+    }
+
+    &_lh-normal {
+      line-height: 1.2;
+    }
+
+    &_lh13 {
+      line-height: 1.3;
+    }
+
+    a {
+      border-bottom: 1px solid currentColor;
     }
   }
 
@@ -2138,6 +2214,48 @@
     @include screen('md') {
       margin-left: 0;
       width: 100%;
+    }
+  }
+
+  &__radio-list {
+    display: block;
+    width: 100%;
+
+    &:not(:first-child) {
+      margin-top: 48px;
+
+      @include screen('sm') {
+        margin-top: 40px;
+      }
+    }
+
+    .block-check {
+      &:not(:first-child) {
+        margin-top: 28px;
+
+        @include screen('sm') {
+          margin-top: 15px;
+        }
+      }
+    }
+  }
+
+  &__team-list {
+    display: flex;
+    justify-content: space-between;
+    align-content: flex-start;
+    box-sizing: border-box;
+    flex-wrap: wrap;
+    margin-left: -10px;
+    margin-right: -10px;
+
+    &:not(:first-child) {
+      margin-top: 36px;
+    }
+
+    .team-check {
+      margin: 10px;
+      flex: none;
     }
   }
 }
