--- a/app/blocks/warning/warning.scss
+++ b/app/blocks/warning/warning.scss
@@ -22,4 +22,22 @@
 
     line-height: (20/14);
   }
+
+  &_fz21 {
+    font-size: 21px;
+    letter-spacing: -.04em;
+    line-height: .94;
+    padding: 24px 30px 30px;
+
+    @include screen('sm') {
+      @include text;
+
+      padding: 10px;
+      line-height: (20 / 14);
+    }
+  }
+
+  &_tal {
+    text-align: left;
+  }
 }
