fix issue#39 and form-panel in new popups on Safari

--- a/app/components/popup-cancelation-contract/popup-cancelation-contract-unsigned.pug
+++ b/app/components/popup-cancelation-contract/popup-cancelation-contract-unsigned.pug
@@ -9,6 +9,6 @@ mixin popup-cancelation-contract-unsigned()
             +icon('long-arrow', true).popup__arrow
           div.popup__header-text Read carefully the information below
       +popup-content
-        div.popup__scrollblock.js-scrollbar-light-md
+        div.popup__scrollblock
           +cancelation-form-unsigned
           block
